--- a/ui/package.json
+++ b/ui/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "element-ui": "^2.8.2",
+    "js-base64": "^2.5.1",
     "mavon-editor": "^2.6.17",
     "vue": "^2.6.10",
     "vue-cropperjs": "^3.0.0",
